Fix whitespace bottom due to font lineheight

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #111111;
 }
 
 a {
