--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
   display: grid;
   height: 100vh;
   grid-template-columns: 24px 1fr 24px 210px 24px 1fr 24px 1fr 24px;
-  grid-template-rows: 24px 1fr 24px 107px 24px 107px 24px 107px 24px 107px 24px;
+  grid-template-rows: 37px 1fr 24px 107px 24px 107px 24px 107px 24px 107px 37px;
   grid-template-areas:
     ". . . . . . . . ."
     ". . . . . . . . ."
@@ -16,7 +16,6 @@
     ". . . bio bio bio . . ."
     ". . . . . . . . .";
   color: #cacaca;
-  background: #111111;
 
   .border {
     border: solid #373737 1px;
